tests/typing/pass/fun_pointer.crs
fn main() {
    var a = test;
    var b = 3;
    a(b);
}

fn test(c : i32) {
}