tests/typing/fail/init_var_type_void.crs
fn test() {
}

fn main() {
    var a = test();
}